--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Highly efficient and transferable interatomic potentials for α-iron and α-iron/hydrogen binary systems using deep neural networks
 
+Go to https://github.com/shihao-code/FeH-NNP/tags to download all files
+
 Nov21.2023
 
 There are 3 folders:
